
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int width; int height; } ;
struct vc_data {scalar_t__ vc_mode; TYPE_1__ vc_font; } ;
struct fbcon_display {int fontdata; scalar_t__ userfont; } ;
struct fb_info {scalar_t__ node; } ;
struct fb_blit_caps {int x; int y; int len; scalar_t__ flags; } ;
struct TYPE_4__ {struct vc_data* d; } ;


 int FNTCHARCNT (int ) ;
 scalar_t__ KD_TEXT ;
 scalar_t__* con2fb_map ;
 struct fbcon_display* fb_display ;
 size_t fg_console ;
 int first_fb_vc ;
 int last_fb_vc ;
 TYPE_2__* vc_cons ;

void fbcon_get_requirement(struct fb_info *info,
      struct fb_blit_caps *caps)
{
 struct vc_data *vc;
 struct fbcon_display *p;

 if (caps->flags) {
  int i, charcnt;

  for (i = first_fb_vc; i <= last_fb_vc; i++) {
   vc = vc_cons[i].d;
   if (vc && vc->vc_mode == KD_TEXT &&
       info->node == con2fb_map[i]) {
    p = &fb_display[i];
    caps->x |= 1 << (vc->vc_font.width - 1);
    caps->y |= 1 << (vc->vc_font.height - 1);
    charcnt = (p->userfont) ?
     FNTCHARCNT(p->fontdata) : 256;
    if (caps->len < charcnt)
     caps->len = charcnt;
   }
  }
 } else {
  vc = vc_cons[fg_console].d;

  if (vc && vc->vc_mode == KD_TEXT &&
      info->node == con2fb_map[fg_console]) {
   p = &fb_display[fg_console];
   caps->x = 1 << (vc->vc_font.width - 1);
   caps->y = 1 << (vc->vc_font.height - 1);
   caps->len = (p->userfont) ?
    FNTCHARCNT(p->fontdata) : 256;
  }
 }
}
